# phylodata

./: .gitignore  AGENTS.md  PRINCIPLES.md  README.md  TODO.md  package-lock.json  package.json  schema.json
cli/: JOURNAL.md  README.md  TODO.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  examples.py  justfile  output.json  pyproject.toml
cli/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled3-checkpoint.ipynb
cli/.streamlit/: config.toml
cli/LanguageTest_phylodata/: phylodata_metadata.json
cli/phylodata/: __init__.py  add_language_metadata.py  add_nucleotide_metadata.py  add_protein_metadata.py  beast2_package_parser.py  blast_utils.py  data_types.py  errors.py  fetch_nucleotide_metadata.py  fetch_protein_metadata.py  language_utils.py  main.py  module.py  parse_beast2_samples.py  parse_evolutionary_model.py  parse_files.py  parse_samples.py  parse_trees.py  taxon_utils.py  types.py  ui.py  utils.py  version.py
cli/phylodata/evolutionary_model/: evolutionary_model_module.py  parse_beast2_packages.py  parse_evolutionary_model.py
cli/phylodata/experiment/: experiment_module.py
cli/phylodata/files/: files_module.py  parse_files.py
cli/phylodata/loader/: consts.py  download_file.py  experiment_utils.py  get_files.py  load_experiment.py  preview_env.py
cli/phylodata/modules/: evolutionary_model_module.py  module.py  (+5 more)
cli/scripts/: generate_json_schema.py
cli/tests/: test_babel_detection.py  test_beast2_config_parsing.py  test_beast2_logs_parsing.py  test_beast2_trees_parsing.py  test_get_file.py  test_get_file_of_type.py  test_get_files.py  test_hky_detection.py  test_parse_trees.py  test_relaxed_clock_detection.py  test_summary_tree.py
cli/xml_examples/: babel.xml  normal_seq.xml  obama.xml  seq_and_traits.xml
(+339 files in other folders)
