[project]
name = "phylodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bibtexparser>=2.0.0b1",
    "biopython>=1.85",
    "commonnexus>=1.9.2",
    "msgspec>=0.19.0",
    "nicegui>=2.20.0",
    "rapidfuzz>=3.13.0",
    "rdflib>=7.1.4",
    "streamlit>=1.46.0",
    "taxoniq>=1.0.3",
]

[project.scripts]
phylodata = "phylodata.main:main"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.0"]

[tool.ruff.lint]
extend-select = ["I"]
