[project]
name = "phylodata"
version = "0.9.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=2.0.0b1",
    "biopython>=1.85",
    "click>=8.2.1",
    "commonnexus>=1.9.2",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "nicegui>=2.20.0",
    "pytest>=8.4.1",
    "rapidfuzz>=3.13.0",
    "rdflib>=7.1.4",
    "streamlit>=1.46.0",
    "taxoniq>=1.0.3",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
phylodata = "phylodata.main:cli"

[dependency-groups]
dev = ["pyright>=1.1.402", "pytest>=8.4.1", "ruff>=0.12.0"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
